Update: 19 Oct - Spring Cloud ActiveMQ

--- a/BackEnd_Java/Spring_microservices_Git/wk7client1/src/main/resources/application.properties
+++ b/BackEnd_Java/Spring_microservices_Git/wk7client1/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-server.application.name = SERVICE1
+#server.application.name = SERVICE1
+spring.application.name = SERVICE1
 server.port = 8081
 eureka.client.register-with-eureka = true
 eureka.client.fetch-registry = true
