--- a/BackEnd_Java/Spring_microservices_Git/wk7client2/src/main/resources/application.properties
+++ b/BackEnd_Java/Spring_microservices_Git/wk7client2/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.application.name = SERVICE2
+spring.application.name = SERVICE2
 
 eureka.client.register-with-eureka = true
 eureka.client.fetch-registry = true
