--- a/BackEnd_Java/Spring_microservices_Git/wk7client3cb/src/main/resources/application.properties
+++ b/BackEnd_Java/Spring_microservices_Git/wk7client3cb/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.application.name = SERVICE3
+spring.application.name = SERVICE3
 server.port = 8083
 eureka.client.register-with-eureka = true
 eureka.client.fetch-registry = true
